#
AM_CPPFLAGS          = -I$(top_builddir) -I$(BOOST_DIR) -I$(CPPAD_DIR)
AM_CXXFLAGS          = -g
#
lib_LIBRARIES        = libmat2cpp.a
libmat2cpp_a_SOURCES = \
	c2dpotrf.f \
	cholesky.cpp \
	diag_prod.cpp \
	element_unary.cpp \
	matrix_div.cpp \
	max.cpp \
	min.cpp \
	scalar.cpp \
	sum.cpp \
	rand.cpp \
	randn.cpp 

